--- a/styles.css
+++ b/styles.css
@@ -5,32 +5,46 @@ body{
 
 .page-footer {
     position: fixed;
-    bottom: 0;
     width: 100%;
-    
-    border-top: 1px solid #aaa;
+    bottom: 0;
+    border-top: 5px solid #aaa;
     padding-top: 10px;
-    background-color: lightblue;
+    padding-bottom: 10px;
+    background-color: #3e3f3a;
+    color: white;
 }
 
 .navbar {
-    background-color: lightblue;
     font-family: cursive;
+    color: grey;
+    border-bottom: 5px solid #aaa;
 }
 
 .jumbotron {
     background-color: lightblue;
+    border: 5px solid #aaa;
+
 }
 
 .completed-task {
     text-decoration: line-through;
-    text-align: center;
+    
     
 }
 
 .boxed {
     background-color: lightblue;
-    border-radius: 9px;
-    height: 100px;
+    border-radius: 5px;
+    height: 150px;
     padding-top: 20px;
+    border: 5px solid #aaa;
+    text-align: center;
+    word-wrap: break-word;
+    width: 26em;
+}
+
+.pull-down{
+    position: absolute;
+    bottom: 0;
+    margin-left: 45px;
 }
